Change about me to reflect new appointment

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,11 @@
 title: stty.io
 subtitle:
 description: >
-  I’m an undergrad student working on autonomous boats and underwater vehicles, 
-  particularly in mission planning, guidance, navigation and control. I program 
-  mainly in C++ and Python.
+  I used to be an  undergrad student working on autonomous boats and underwater vehicles,
+  particularly in mission planning, guidance, navigation and control.
+
+
+  Currently, I'm working as a Site Reliability Engineer at [Grab Singapore](https://grab.com).
 
 
   alex (at) stty.io
