update about me

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,10 @@
 title: stty.io
 subtitle:
 description: >
-  I used to be an  undergrad student working on autonomous boats and underwater vehicles,
+  I'm a Site Reliability Engineer working with production systems that empower millions of users.
+
+
+  As an undergraduate student I used to work on autonomous boats and underwater vehicles,
   particularly in mission planning, guidance, navigation and control.
 
 
