update about me

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: stty.io
 subtitle:
 description: >
-  I'm a Site Reliability Engineer working with production systems that empower millions of users.
+  Hello! I'm Alex and I'm a Site Reliability Engineer working with production systems that empower millions of users.
 
 
   As an undergraduate student I used to work on autonomous boats and underwater vehicles,
