Update about me and rsync post

--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,14 @@
 title: stty.io
 subtitle:
 description: >
-  Hello! I'm Alex, a Site Reliability Engineer working with production systems that empower millions of users.
+  Hello! I'm Alex and I'm an SRE working on (and breaking) production systems.
 
 
   As an undergraduate student I used to work on autonomous boats and underwater vehicles,
   particularly in mission planning, guidance, navigation and control.
+
+
+  Opinions on my blog are my own.
 
 
   alex (at) stty.io
